s1890 - Client changes so that URI is passed in constructor